--- a/init.org
+++ b/init.org
@@ -551,26 +551,80 @@
 * Helper functions
 ** copy-line
 #+begin_src emacs-lisp
-    (defun copy-line (arg)
-      "copy lines (as many as prefix argument) in the kill ring.
-        ease of use features:
-        - move to start of next line.
-        - appends the copy on sequential calls.
-        - use newline as last char even on the last line of the buffer.
-        - if region is active, copy its lines."
-      (interactive "p")
-      (let ((beg (line-beginning-position))
-            (end (line-end-position arg)))
-        (when mark-active
-          (if (> (point) (mark))
-              (setq beg (save-excursion (goto-char (mark)) (line-beginning-position)))
-            (setq end (save-excursion (goto-char (mark)) (line-end-position)))))
-        (if (eq last-command 'copy-line)
-            (kill-append (buffer-substring beg end) (< end beg))
-          (kill-ring-save beg end)))
-      (kill-append "\n" nil)
-      (beginning-of-line (or (and arg (1+ arg)) 2))
-      (if (and arg (not (= 1 arg))) (message "%d lines copied" arg)))
+  (defun copy-line (arg)
+    "copy lines (as many as prefix argument) in the kill ring.
+      ease of use features:
+      - move to start of next line.
+      - appends the copy on sequential calls.
+      - use newline as last char even on the last line of the buffer.
+      - if region is active, copy its lines."
+    (interactive "p")
+    (let ((beg (line-beginning-position))
+          (end (line-end-position arg)))
+      (when mark-active
+        (if (> (point) (mark))
+            (setq beg (save-excursion (goto-char (mark)) (line-beginning-position)))
+          (setq end (save-excursion (goto-char (mark)) (line-end-position)))))
+      (if (eq last-command 'copy-line)
+          (kill-append (buffer-substring beg end) (< end beg))
+        (kill-ring-save beg end)))
+    (kill-append "\n" nil)
+    (beginning-of-line (or (and arg (1+ arg)) 2))
+    (if (and arg (not (= 1 arg))) (message "%d lines copied" arg)))
+
+  (defun create-cloze ()
+    (save-excursion
+      (set-mark
+       (let ((beg (org-element-property :contents-begin (org-element-at-point)))
+             (end (org-element-property :contents-end (org-element-at-point))))
+         (kill-region beg end))
+       )
+      )
+    )
+
+  (defun create-headline (title level)
+    (org-element-interpret-data `(headline (:level ,level :title ,title))))
+
+  (defun my/creat-cloze ()
+    (interactive)
+    (save-excursion
+      (let ((beg (org-element-property :contents-begin (org-element-at-point)))
+            (end (org-element-property :contents-end (org-element-at-point)))
+            (level (org-element-property :level (org-element-at-point))))
+        (goto-char beg)
+        (when (eq 'property-drawer (car (org-element-at-point)))
+          (goto-char (org-element-property :end (org-element-at-point)))
+          )
+        (kill-region (point) end)
+        (let ((headline (create-headline "Text" (+ level 1))))
+          (insert headline)
+          (insert (car kill-ring-yank-pointer))
+          )
+        )
+      )
+    )
+
+  (defun my/create-basic ()
+    (interactive)
+    (save-excursion
+      (let ((beg (org-element-property :contents-begin (org-element-at-point)))
+            (end (org-element-property :contents-end (org-element-at-point)))
+            (level (org-element-property :level (org-element-at-point))))
+        (goto-char beg)
+        (when (eq 'property-drawer (car (org-element-at-point)))
+          (goto-char (org-element-property :end (org-element-at-point)))
+          )
+        (kill-region (point) end)
+        (let ((headline-front (create-headline "Front" (+ level 1)))
+              (headline-back (create-headline "Back" (+ level 1))))
+          (insert headline-front)
+          (insert "\n")
+          (insert headline-back)
+          (insert (car kill-ring-yank-pointer))
+          )
+        )
+      )
+    )
 #+end_src
 * Keybindings
 #+begin_src emacs-lisp
